[package]
name = "teaops-agentd"
version = "0.1.0"
edition = "2021"
description = "TeaOps agent supervisor daemon (keeps teaops-agent running; survives restarts without systemd)"

[dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread", "process", "time", "signal", "sync"] }
anyhow = "1"
fs2 = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[profile.release]
opt-level = 3
lto = true
